--- a/website/views/pages/docs/basic-documentation.ejs
+++ b/website/views/pages/docs/basic-documentation.ejs
@@ -41,7 +41,7 @@
             <img class="cta-image" alt="Fleet support" src="/images/fleet-support-140x72@2x.png"/>
             <div class="text-center text-md-left cta-text">
               <p class="font-weight-bold p-0 pl-md-4 pt-2 pt-md-0 m-0">Can't find what you need?</p>
-              <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow" href="/slack">
+              <a class="p-0 pl-md-4 pt-2 pt-md-0 arrow">
                 Support
                 <img class="d-inline mb-1" style="height: 16px; width: auto;" alt="right arrow" src="/images/arrow-right-16x16@2x.png" />
               </a>
