--- a/frontend/pages/hosts/details/cards/Software/SoftwareVulnCount/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/SoftwareVulnCount/_styles.scss
@@ -7,12 +7,11 @@
   overflow: auto;
   margin-bottom: $pad-large;
   padding: $pad-large;
-  padding-bottom: $pad-small;
 
   p {
     padding-left: $pad-large;
     margin-top: $pad-medium;
-    margin-bottom: $pad-medium;
+    margin-bottom: 0;
   }
 
   img {
