tab through dropdown

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -104,8 +104,8 @@
     }
 
     .Select.is-focused:not(.is-open) > .Select-control {
-      border: none;
       box-shadow: none;
+      background-color: $ui-vibrant-blue-10;
     }
 
     .Select.is-open {
