Focus visible on tab and not onclick

--- a/frontend/components/TableContainer/DataTable/_styles.scss
+++ b/frontend/components/TableContainer/DataTable/_styles.scss
@@ -32,8 +32,7 @@
       &.single-row {
         cursor: pointer;
 
-        &:hover,
-        &:focus {
+        &:hover {
           background-color: rgba($core-vibrant-blue, 0.1);
         }
       }
