feat: add chat to community navigation menu items

--- a/website/views/layouts/layout.ejs
+++ b/website/views/layouts/layout.ejs
@@ -121,6 +121,7 @@
               <a purpose="mobile-dropdown-toggle" class="d-flex align-items-center mr-4 collapsed" data-toggle="collapse" data-target="#mobileNavbarToggleCommunity">Community</a>
               <div class="d-block">
                 <div id="mobileNavbarToggleCommunity" purpose="mobile-dropdown" class="collapse" data-parent="#mobileDropdowns">
+                  <a href="/slack">Chat</a>
                   <a href="/docs/contributing">Contribute</a>
                   <a href="/blog">Blog</a>
                   <a href="/handbook">Handbook</a>
@@ -160,6 +161,7 @@
             <div purpose="dropdown-button" class="btn-group">
               <a class="dropdown-toggle d-flex align-items-center py-2 px-3" data-toggle="dropdown">Community</a>
               <div purpose="header-dropdown" class="dropdown-menu">
+                <a class="dropdown-item mb-1" href="/slack">Chat</a>
                 <a class="dropdown-item mb-1" href="/docs/contributing">Contribute</a>
                 <a class="dropdown-item mb-1" href="/blog">Blog</a>
                 <a class="dropdown-item mb-1" href="/handbook">Handbook</a>
