--- a/frontend/components/TabsWrapper/_styles.scss
+++ b/frontend/components/TabsWrapper/_styles.scss
@@ -20,6 +20,7 @@
       &:focus {
         box-shadow: none;
         outline: 0;
+        background-color: $ui-vibrant-blue-10;
 
         &:after {
           left: 0;
