--- a/website/assets/styles/pages/homepage.less
+++ b/website/assets/styles/pages/homepage.less
@@ -73,7 +73,7 @@
     max-width: 1200px;
     padding-bottom: 50px;
     box-sizing: content-box;
-    [purpose='tweet-card'], [purpose='tweet-card-bottom-row'] {
+    [purpose='tweet-card'] {
       text-align: left;
       background: #FFFFFF;
       padding: 40px;
@@ -240,11 +240,6 @@
         margin-right: 15px;
         flex: 0 1 326px;
       }
-      [purpose='tweet-card-bottom-row'] {
-        margin-left: 15px;
-        margin-right: 15px;
-        flex: 0 1 380px;
-      }
     }
     [purpose='demo-cta'] {
       max-width: 960px;
@@ -255,7 +250,7 @@
     [purpose='tweets'] {
       padding-left: 72px;
       padding-right: 72px;
-      [purpose='tweet-card'], [purpose='tweet-card-bottom-row'] {
+      [purpose='tweet-card'] {
         flex: 1 1 360px;
         margin-bottom: 15px;
         margin-left: 8px;
@@ -278,7 +273,7 @@
   }
   @media (max-width: 990px) {
     [purpose='tweets'] {
-      [purpose='tweet-card'], [purpose='tweet-card-bottom-row'] {
+      [purpose='tweet-card'] {
         flex: 1 1 295px;
       }
     }
@@ -311,7 +306,7 @@
     [purpose='tweets'] {
       padding-left: 52px;
       padding-right: 52px;
-      [purpose='tweet-card'], [purpose='tweet-card-bottom-row'] {
+      [purpose='tweet-card'] {
         flex: 1 1 316px;
       }
     }
@@ -354,7 +349,7 @@
     [purpose='tweets'] {
       padding-left: 16px;
       padding-right: 16px;
-      [purpose='tweet-card'], [purpose='tweet-card-bottom-row'] {
+      [purpose='tweet-card'] {
         margin-bottom: 30px;
       }
     }
