--- a/frontend/pages/Homepage/cards/Software/_styles.scss
+++ b/frontend/pages/Homepage/cards/Software/_styles.scss
@@ -86,7 +86,7 @@
       font-size: $small !important;
     }
   }
-  .data-table-container {
+  .data-table-block {
     .data-table__table {
       table-layout: fixed;
 
