--- a/frontend/pages/hosts/details/cards/Software/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/_styles.scss
@@ -1,69 +1,115 @@
 .section--software {
-  .data-table__table {
-    table-layout: fixed;
-
-    th {
-      &:first-child {
-        border-right: none;
-        width: 16px;
-        padding-right: 0px;
-      }
-      &:nth-child(2) {
-        width: 25%;
-        padding-right: 0px;
-      }
-      &:last-child {
-        width: 150px;
-        overflow: none;
-      }
-
-      &.source__header {
-        width: 20%;
-      }
-
-      &.version__header {
-        border-right: 0;
-      }
-    }
-
-    tr {
-      td {
-        position: relative;
-        &:first-child {
-          padding-right: 0px;
+  .data-table-block {
+    .data-table__table {
+      table-layout: fixed;
+      thead {
+        .name__header {
+          width: $col-md;
         }
-      }
-
-      .software-link {
-        visibility: hidden;
-        img {
-          vertical-align: text-top;
+        .version__header {
+          width: 0px;
         }
-      }
-
-      &:hover {
-        .software-link {
-          visibility: visible;
-          img {
-            width: 16px;
+        .source__header {
+          display: none;
+          width: 0px;
+        }
+        .vulnerabilities__header {
+          display: none;
+          width: 0px;
+        }
+        .hosts_count__header {
+          border-right: 0;
+        }
+        @media (min-width: $break-990) {
+          .version__header {
+            width: $col-md;
+          }
+          .vulnerabilities__header {
+            display: table-cell;
+          }
+        }
+        @media (min-width: $break-1400) {
+          .source__header {
+            display: table-cell;
           }
         }
       }
-    }
 
-    td {
-      overflow: hidden;
-      text-overflow: ellipsis;
-
-      &:last-child {
-        text-overflow: unset;
+      tbody {
+        .name__cell,
+        .version__cell {
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+        }
+        .source__cell {
+          display: none;
+          width: 0px;
+        }
+        .vulnerabilities__cell {
+          width: 0px;
+          display: none;
+        }
+        .hosts_count__cell {
+          .hosts-cell__wrapper {
+            display: flex;
+            justify-content: space-between;
+            .hosts-cell__count {
+              display: none;
+            }
+            .hosts-cell__link {
+              display: flex;
+            }
+          }
+        }
+        @media (min-width: $break-990) {
+          .vulnerabilities__cell {
+            display: table-cell;
+          }
+        }
+        @media (min-width: $break-1400) {
+          .source__cell {
+            display: table-cell;
+            width: 0px;
+          }
+          .hosts_count__cell {
+            .hosts-cell__wrapper {
+              .hosts-cell__count {
+                display: flex;
+              }
+            }
+          }
+        }
       }
-    }
 
-    .name__cell,
-    .version__cell {
-      overflow: initial;
-      text-overflow: initial;
+      tr {
+        .software-link {
+          color: $core-vibrant-blue;
+          visibility: hidden;
+          font-weight: bold;
+          text-decoration: none;
+          vertical-align: middle;
+
+          a {
+            text-decoration: none;
+          }
+          img {
+            height: 16px;
+            width: 16px;
+            vertical-align: middle;
+          }
+
+          .link-text {
+            padding-right: $pad-xxsmall;
+          }
+        }
+
+        &:hover {
+          .software-link {
+            visibility: visible;
+          }
+        }
+      }
     }
   }
 }
