--- a/frontend/styles/global/_global.scss
+++ b/frontend/styles/global/_global.scss
@@ -48,11 +48,12 @@ a {
   margin: 0;
 }
 
+// TODO: figure out how body wrap changes impact the manage hosts page and any others?
 .body-wrap {
-  padding: $pad-xxlarge;
+  padding: $pad-xlarge;
   border-radius: 3px;
   background-color: $core-white;
-  min-width: 798px;
+  // min-width: 768px;
 }
 
 .has-sidebar {
